--- a/index.html
+++ b/index.html
@@ -31,27 +31,46 @@
 <script>
   //向上收合+transition
   $(document).ready(function () {
+    var stateCount = 0;
+    var classes = {
+      closed: 'closed', // [string]
+      closing: 'closing', // [string] 
+      opened: 'opened', // [string] 
+      opening: 'opening' // [string] 
+    };
 
-    function first() {
+    function startOpen() {
       $(".imgbox").animate({
         bottom: 300,
       }, 1000, function () {
-        console.log('up completed')
-        $('.btn').html('展開');
+        console.log('close completed')
+        $('.btn').css('display', 'block').text('展開');
+        $('.imgbox').addClass('closed')
       });
-    }
-
+    } //open
     $(".btn").click(function () {
-      $(".imgbox").animate({
-        bottom: 0,
-      }, 1000, function () {
-        console.log('down completed')
-        $('.btn').html('合上');
-      });
-    });
-
-
-    setTimeout(first, 2000)
+      stateCount++;
+      var state = stateCount % 2;
+      console.log('state =' + state);
+      if (state) {
+        $(".imgbox").addClass('opening').removeClass('closed').animate({
+          bottom: 0,
+        }, 1000, function () {
+          console.log('down completed');
+          $('.btn').text('合上');
+          $('.imgbox').removeClass('opening').addClass('opened')
+        });
+      } else {
+        $(".imgbox").addClass('closing').removeClass('opened').animate({
+          bottom: 300,
+        }, 1000, function () {
+          console.log('down completed');
+          $('.btn').text('展開');
+          $('.imgbox').removeClass('closing').addClass('closed')
+        });
+      };
+    }); //btn click
+    setTimeout(startOpen, 2000)
   }); //ready
 </script>
 
